# MultiCaptions

./: .gitignore  README.md  pyproject.toml  requirements.txt
Markdowns/: build.md
backend/app/: chunker.py  main.py  translate.py
extension/: content_script.js  manifest.json  overlay.css  service_worker.js
scripts/: dev_run_backend.sh  test_ws_client.py
